--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+          Fixes the SYNOPSIS.
 
 v0.2      2012-11-05 03:36:38 UTC
           Override WWW::Shorten::generic's import with Exporter's import that DTRT.
